# snippets

./: README.md
C/libsoup/download/async/: README.md  download-async.c  download-async.h  main.c  meson.build
docs/reference/: meson.build  snippets-docs.xml
